# EmbodiedSNNPrototype

./: .gitignore  EDL_DELIVERY.md  README.md  pyproject.toml  requirements.txt
configs/: benchmark.yaml  edl_benchmark.yaml  quick.yaml  sweep.yaml
docs/: EDL_COMPLETION_REPORT.md  EDL_DELIVERY_CHECKLIST.md  EDL_INTEGRATION_CHECKLIST.md  EDL_QUICK_REFERENCE.md  ari_architecture_drafts.md  ari_founder_book.tex  ari_founder_handbook.tex  ari_taste_standards.md  edl_transfer_guide.md  foundations_and_taste.md  neuro_symbiosis_edl_adapter.py  prototype_roadmap.md  reading_list.md  twelve_month_plan.md  twelve_week_plan.md
docs/reports/: 2026-03-13_connectivity_study.md  README.md
outputs/benchmark/: benchmark_report.md  benchmark_runs.csv  benchmark_summary.csv
outputs/edl_analysis/: edl_analysis_report.json  edl_analysis_report.md
outputs/edl_benchmark_smoke/: edl_report.json  edl_report.md
outputs/pdf/: ari_founder_book.aux  ari_founder_book.out  ari_founder_book.toc  ari_founder_handbook.aux  ari_founder_handbook.out  ari_founder_handbook.toc
outputs/surrogate_compare_pilot/: summary.json  summary.md
outputs/sweeps/: metrics.csv
scripts/: build_founder_book_pdf.sh  build_handbook_pdf.sh  compare_readout_plasticity.py  generate_edl_analysis.py  run_benchmark.py  run_benchmark_legacy.py  run_demo.py  run_edl_benchmark.py  run_surrogate_pilot.py  sweep_params.py  verify_grn_variance.py
src/embodied_snn_prototype/: __init__.py  analysis.py  config.py  edl.py  environment.py  network.py  simulate.py
tests/: test_analysis.py  test_smoke.py
